Redesigned CSS framework

--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,1 @@
-@import url("https://fonts.googleapis.com/css?family=Quicksand:500");
-body { background-color: #0054d3; margin: 0; font-family: "Quicksand", sans-serif; user-select: none; cursor: default; }
-
-#headerBox { color: #eee; padding: 30px; font-size: 20pt; vertical-align: middle; }
-
-#headerBox #headerText { float: left; }
-
-#headerBox #headerSettings { float: right; cursor: pointer; }
-
-#headerBox #headerSettings:hover { color: #fff; }
-
-#headerBox .clear { clear: both; }
-
-.contentContainer { margin: 10px 40px 10px 40px; display: grid; }
-
-.contentBox { background-color: #fff; margin-bottom: 20px; padding: 20px; border-radius: 2px; vertical-align: middle; }
-
-.contentBox .waqtName { float: left; font-size: 16pt; text-align: left; }
-
-.contentBox .waqtTime { float: right; font-size: 18pt; text-align: right; }
-
-#dimmer { position: fixed; top: 0; bottom: 0; left: 0; right: 0; background-color: black; opacity: 0.7; z-index: 1001; }
-
-input:focus, select:focus { outline: none; border-bottom: 2px solid #0056c7 !important; }
-
-.settingsBox { z-index: 1002; padding: 25px; position: fixed; top: 20%; left: 50%; width: 300px; margin-left: -175px; height: 285px; margin-top: -25px; border-radius: 5px; background-color: #fff; }
-
-.settingsBox #divSettingsHeader #settingsText { float: left; }
-
-.settingsBox #divSettingsHeader #closeIcon { float: right; cursor: pointer; }
-
-.settingsBox #divSettingsContent { position: relative; top: 50px; font-size: 11pt; }
-
-.settingsBox #divSettingsContent #txtCity, .settingsBox #divSettingsContent #txtCountry { font-size: 11pt; padding: 2px; border: none; border-bottom: 1px solid #555; font-family: "Quicksand", sans-serif; }
-
-.settingsBox #divSettingsContent #cmbMethod { background: transparent; width: 185px; font-size: 11pt; font-family: "Quicksand", sans-serif; border: 0; border-bottom: 1px solid #555; border-radius: 0; height: 25px; }
-
-.settingsBox #divSettingsContent .control2 { margin-top: 10px; margin-left: 30px; }
-
-.settingsBox #divSettingsContent .control3 { margin-top: 10px; margin-left: 30px; }
-
-.settingsBox #divSettingsContent #localTime { margin-top: 10px; }
-
-.settingsBox #divSettingsContent #aboutInfo { margin-top: 20px; color: #555; }
-
-.settingsBox #divSettingsContent .aboutLink { color: #222; text-decoration: none; }
-
-#dimmer, .settingsBox { display: none; }
-
-.warningBanner { position: fixed; bottom: 0px; background-color: #ffd725; color: #111; padding: 10px; width: 100%; display: none; z-index: 1004; }
-
-.errorBanner { position: fixed; bottom: 0px; background-color: #ff2a2a; color: #eee; padding: 10px; width: 100%; display: none; z-index: 1003; }
-/*# sourceMappingURL=style.css.map */
+body{background-color:#0054d3;margin:0;font-family:"Quicksand",sans-serif;user-select:none;cursor:default}#headerBox{color:#eee;padding:30px;font-size:20pt;display:flex;flex-direction:row;justify-content:space-between;align-items:center}#headerBox #headerSettings{cursor:pointer}#headerBox #headerSettings:hover{color:#fff}.contentContainer{margin:0px 40px;display:grid;grid-row-gap:20px}.contentBox{background-color:#fff;padding:20px;border-radius:3px}.contentBox .divWaqt{display:flex;flex-direction:row;justify-content:space-between}.contentBox .divWaqt .waqtName{font-size:16pt}.contentBox .divWaqt .waqtTime{font-size:18pt}#dimmer{position:fixed;top:0;bottom:0;left:0;right:0;background-color:black;opacity:0.7;z-index:1001}input:focus,select:focus{outline:none;border-bottom:2px solid #0056c7 !important}.settingsBox{z-index:1002;padding:25px;position:fixed;top:20%;left:50%;transform:translateX(-50%);width:300px;height:285px;border-radius:5px;background-color:#fff}.settingsBox #divSettingsHeader{display:flex;justify-content:space-between;margin-bottom:20px}.settingsBox #divSettingsHeader #closeIcon{cursor:pointer}.settingsBox #divSettingsContent{position:relative;display:grid;grid-row-gap:12px;font-size:11pt}.settingsBox #divSettingsContent #txtCity,.settingsBox #divSettingsContent #txtCountry{font-size:11pt;width:221px;padding:2px;border:none;border-bottom:1px solid #555;font-family:"Quicksand",sans-serif}.settingsBox #divSettingsContent #cmbMethod{background:transparent;width:225px;font-size:11pt;font-family:"Quicksand",sans-serif;border:0;border-bottom:1px solid #555;border-radius:0;height:25px}.settingsBox #divSettingsContent .control1,.settingsBox #divSettingsContent .control2,.settingsBox #divSettingsContent .control3{display:flex;flex-direction:row;justify-content:space-between;align-items:center}.settingsBox #divSettingsContent #aboutInfo{color:#555}.settingsBox #divSettingsContent .aboutLink{margin-top:2px;color:#222;text-decoration:none}.settingsBox #divSettingsContent .aboutLink:hover{color:#000}#dimmer,.settingsBox{display:none}.warningBanner{position:fixed;bottom:0px;background-color:#ffd725;color:#111;padding:10px;width:100%;display:none;z-index:1004}.errorBanner{position:fixed;bottom:0px;background-color:#ff2a2a;color:#eee;padding:10px;width:100%;display:none;z-index:1003}
