--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:500');
-
-$default-font: 'Quicksand', sans-serif;
+$default-font: 'Quicksand',
+sans-serif;
 $theme-color: #0054d3;
+* {
+    // outline: 2px solid black;
+}
+
 body {
     background-color: $theme-color;
     margin: 0;
@@ -14,97 +17,94 @@ body {
     color: #eee;
     padding: 30px;
     font-size: 20pt;
-    vertical-align: middle;
-    #headerText {
-        float: left;
-    }
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     #headerSettings {
-        float: right;
         cursor: pointer;
     }
-    #headerSettings:hover{
+    #headerSettings:hover {
         color: #fff;
     }
-    .clear {
-        clear: both;
-    }
 }
-.contentContainer{
-    margin: 10px 40px 10px 40px;
+
+.contentContainer {
+    margin: 0px 40px;
     display: grid;
+    grid-row-gap: 20px;
 }
 
-.contentBox{
+.contentBox {
     background-color: #fff;
-    margin-bottom: 20px;
     padding: 20px;
-    border-radius: 2px;
-    vertical-align: middle;
-
-    .waqtName{
-        float: left;
-        font-size: 16pt;
-        text-align: left;
-    }
-    .waqtTime{
-        float: right;
-        font-size: 18pt;
-        text-align: right;
+    border-radius: 3px;
+    .divWaqt {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        .waqtName {
+            font-size: 16pt;
+        }
+        .waqtTime {
+            font-size: 18pt;
+        }
     }
 }
 
-#dimmer{
-    position:fixed;
-    top:0;
-    bottom:0;
-    left:0;
-    right:0;
-    background-color:black;
-    opacity:0.7;
-    z-index:1001;
+#dimmer {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: black;
+    opacity: 0.7;
+    z-index: 1001;
 }
-input:focus, select:focus{
+
+input:focus,
+select:focus {
     outline: none;
     border-bottom: 2px solid #0056c7 !important;
 }
-.settingsBox{
+
+.settingsBox {
     z-index: 1002;
     padding: 25px;
     position: fixed;
     top: 20%;
     left: 50%;
+    transform: translateX(-50%);
     width: 300px;
-    margin-left: -175px;
     height: 285px;
-    margin-top: -25px;
     border-radius: 5px;
     background-color: #fff;
-
-    #divSettingsHeader{
-        #settingsText{
-            float: left;
-        }
-        #closeIcon{
-            float: right;
+    #divSettingsHeader {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        #closeIcon {
             cursor: pointer;
         }
     }
-    #divSettingsContent{
+    #divSettingsContent {
         position: relative;
-        top: 50px;
-        // left: -20px;
+        display: grid;
+        grid-row-gap: 12px;
         font-size: 11pt;
-
-        #txtCity, #txtCountry{
+        #txtCity,
+        #txtCountry {
             font-size: 11pt;
+            width: 221px;
             padding: 2px;
             border: none;
             border-bottom: 1px solid #555;
             font-family: $default-font;
         }
-        #cmbMethod{
+        #cmbMethod {
             background: transparent;
-            width: 185px;
+            width: 225px;
             font-size: 11pt;
             font-family: $default-font;
             border: 0;
@@ -112,33 +112,34 @@ input:focus, select:focus{
             border-radius: 0;
             height: 25px;
         }
-        .control2{
-            margin-top: 10px;
-            margin-left: 30px;
+        .control1,
+        .control2,
+        .control3 {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
         }
-        .control3{
-            margin-top: 10px;
-            margin-left: 30px;
-        }
-        #localTime{
-            margin-top: 10px;
-        }
-        #aboutInfo{
-            margin-top: 20px;
+        #aboutInfo {
             color: #555;
         }
-        .aboutLink{
+        .aboutLink {
+            margin-top: 2px;
             color: #222;
             text-decoration: none;
+        }
+        .aboutLink:hover {
+            color: #000;
         }
     }
 }
 
-#dimmer, .settingsBox{
+#dimmer,
+.settingsBox {
     display: none;
 }
 
-.warningBanner{
+.warningBanner {
     position: fixed;
     bottom: 0px;
     background-color: #ffd725;
@@ -148,7 +149,8 @@ input:focus, select:focus{
     display: none;
     z-index: 1004;
 }
-.errorBanner{
+
+.errorBanner {
     position: fixed;
     bottom: 0px;
     background-color: #ff2a2a;
